sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/Collection_Data__c.object-meta.xml
<CustomObject>
    <label>Waste Data</label>
    <nameField>
        <label>Waste Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waste Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>