sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/ApproxCust__c.field-meta.xml
<CustomField>
    <fullName>ApproxCust__c</fullName>
    <formula>( Urine_Weight_kg__c  + Feces_Weight_kg__c )/ Toilet__r.Location__r.Waste_User_Ratio__c</formula>
    <label>Approximated # of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>