sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/ApproxCustperDay__c.field-meta.xml
<CustomField>
    <fullName>ApproxCustperDay__c</fullName>
    <formula>Total_Waste_kg_day__c /Toilet__r.Location__r.Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approximated # of Customers (per day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>