sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Campaign_Tools_Influencing__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tools_Influencing__c</fullName>
    <label>Campaign Tools Influencing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>