sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Campaigns_Influencing__c.field-meta.xml
<CustomField>
    <fullName>Campaigns_Influencing__c</fullName>
    <label>Campaigns Influencing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>