sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Collection_Route__c.field-meta.xml
<CustomField>
    <fullName>Collection_Route__c</fullName>
    <formula>TEXT(Toilet__r.Collection_Route__c)</formula>
    <label>Collection Route</label>
    <type>Text</type>
</CustomField>