sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_Container_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>Feces_Container_Type_formula__c</fullName>
    <formula>TEXT(Toilet__r.Waste_Container_Type__c)</formula>
    <label>Feces Container Type (formula)</label>
    <type>Text</type>
</CustomField>