sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_Container_Type_text__c.field-meta.xml
<CustomField>
    <fullName>Feces_Container_Type_text__c</fullName>
    <label>Feces Container Type (text)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>