sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Feces_Container_Weight__c</fullName>
    <formula>IF(  Feces_Container_Type_text__c = &quot;30L&quot; , 
1.52, 
2.02)</formula>
    <label>Feces Container Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>