sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_kg__c.field-meta.xml
<CustomField>
    <fullName>Feces_kg__c</fullName>
    <label>Feces (kg)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>