sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_kg_day__c.field-meta.xml
<CustomField>
    <fullName>Feces_kg_day__c</fullName>
    <formula>Feces_Weight_kg__c  / Days_Since_Last_Collection__c</formula>
    <label>Feces (kg/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>