sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Feces_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Feces_Weight_kg__c</fullName>
    <formula>IF( 

 ISPICKVAL( Total_Weight_Estimated_at_Processing__c , &quot;Yes&quot;),  

Feces_kg__c , 

 IF( Feces_kg__c &gt; 0,

 Feces_kg__c - Feces_Container_Weight__c, 

0)


)</formula>
    <label>Feces Weight (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>