sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Missed_Collection_Code__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Code__c</fullName>
    <inlineHelpText>1. Low usage – FLT not used
2. Toilet Overflowed
3. Closed by Sanergy
4. Toilet Locked
5. 
6. School Closed
7. Workman missed collection
8. FLO request skip or special schedule
9. Church or Institution Closed
10. Research Toilet
11. Other</inlineHelpText>
    <label>Missed Collection Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>