sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Record_Age__c.field-meta.xml
<CustomField>
    <fullName>Record_Age__c</fullName>
    <formula>TODAY() - Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>