sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/TACD__c.field-meta.xml
<CustomField>
    <fullName>TACD__c</fullName>
    <formula>Collection_Date__c -  Toilet__r.Min_Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toilet Age at Collection Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>