sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/This_Quarter_1__c.field-meta.xml
<CustomField>
    <fullName>This_Quarter_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>This Quarter</label>
    <type>Checkbox</type>
</CustomField>