sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/This_quarter_del__c.field-meta.xml
<CustomField>
    <fullName>This_quarter_del__c</fullName>
    <formula>Collection_Date__c &gt; ( TODAY() - 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This quarter?</label>
    <type>Checkbox</type>
</CustomField>