sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Waste Data</relationshipLabel>
    <relationshipName>Collection_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>