sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Toilet_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Toilet_External_ID__c</fullName>
    <formula>Toilet__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toilet External ID</label>
    <type>Text</type>
</CustomField>