sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Total_Waste_kg_day__c.field-meta.xml
<CustomField>
    <fullName>Total_Waste_kg_day__c</fullName>
    <formula>Urine_kg_day__c +    Feces_kg_day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Waste (kg/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>