sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Total_Weight_Estimated_at_Processing__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Estimated_at_Processing__c</fullName>
    <label>Total Weight Estimated at Processing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>