sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Urine_Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Urine_Container_Weight__c</fullName>
    <formula>1</formula>
    <label>Urine Container Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>