sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Urine_kg_day__c.field-meta.xml
<CustomField>
    <fullName>Urine_kg_day__c</fullName>
    <formula>Urine_Weight_kg__c   / Days_Since_Last_Collection__c</formula>
    <label>Urine (kg/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>