sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/Urine_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Urine_Weight_kg__c</fullName>
    <formula>IF(  

ISPICKVAL(Total_Weight_Estimated_at_Processing__c, &quot;Yes&quot;),

 Urine_kg__c ,

IF(

 Urine_kg__c &gt; 0, 

Urine_kg__c -  Urine_Container_Weight__c, 

0) 

 )</formula>
    <label>Urine Weight (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>