sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/fields/X160_L_Container_Number__c.field-meta.xml
<CustomField>
    <fullName>X160_L_Container_Number__c</fullName>
    <description>160 L container this waste went into.</description>
    <label>160 L Container Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>