sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/recordTypes/Waste_Data.recordType-meta.xml
<RecordType>
    <fullName>Waste_Data</fullName>
    <active>true</active>
    <label>Waste Data</label>
</RecordType>