sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/validationRules/Collection_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Collection_Date</fullName>
    <active>false</active>
    <description>Collection date cannot be more than a month old</description>
    <errorConditionFormula>OR (
YEAR( Collection_Date__c ) &lt;&gt; YEAR ( TODAY() ),
MONTH( Collection_Date__c ) &lt;&gt; MONTH ( TODAY() )
)</errorConditionFormula>
    <errorMessage>Collection Date has to be within the month</errorMessage>
</ValidationRule>