sfSandBoxCode/force-app/main/default/objects/Collection_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection_Date__c</columns>
    <columns>Toilet__c</columns>
    <columns>Location__c</columns>
    <columns>Feces_kg_day__c</columns>
    <columns>Urine_kg_day__c</columns>
    <columns>Total_Waste_kg_day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>